--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hello-astro",
-  "description": "Hello Astro is a full featured Astro corporate/marketing/blog starter theme written in Typescript and TailwindCSS. It supports Markdown and MDX based pages and blog posts.",
+  "name": "servicii-funerare-sascut",
+  "description": "A website built for Funeral Services",
   "version": "4.0.0",
   "scripts": {
     "dev": "astro dev",
